; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_ai_cmd.c_BotMatch_FormationSpace.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_ai_cmd.c_BotMatch_FormationSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { float }
%struct.TYPE_9__ = type { i32 }

@MAX_MESSAGE_SIZE = common dso_local global i32 0, align 4
@NUMBER = common dso_local global i32 0, align 4
@ST_FEET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BotMatch_FormationSpace(%struct.TYPE_8__* %0, %struct.TYPE_9__* %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca float, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %4, align 8
  %9 = load i32, i32* @MAX_MESSAGE_SIZE, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %5, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %6, align 8
  %13 = call i32 (...) @TeamPlayIsOn()
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %2
  store i32 1, i32* %8, align 4
  br label %53

16:                                               ; preds = %2
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %19 = call i32 @BotAddressedToBot(%struct.TYPE_8__* %17, %struct.TYPE_9__* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %16
  store i32 1, i32* %8, align 4
  br label %53

22:                                               ; preds = %16
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %24 = load i32, i32* @NUMBER, align 4
  %25 = load i32, i32* @MAX_MESSAGE_SIZE, align 4
  %26 = call i32 @trap_BotMatchVariable(%struct.TYPE_9__* %23, i32 %24, i8* %12, i32 %25)
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %28 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i32, i32* @ST_FEET, align 4
  %31 = and i32 %29, %30
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %22
  %34 = call i32 @atof(i8* %12)
  %35 = sitofp i32 %34 to double
  %36 = fmul double 9.753600e+00, %35
  %37 = fptrunc double %36 to float
  store float %37, float* %7, align 4
  br label %42

38:                                               ; preds = %22
  %39 = call i32 @atof(i8* %12)
  %40 = mul nsw i32 32, %39
  %41 = sitofp i32 %40 to float
  store float %41, float* %7, align 4
  br label %42

42:                                               ; preds = %38, %33
  %43 = load float, float* %7, align 4
  %44 = fcmp olt float %43, 4.800000e+01
  br i1 %44, label %48, label %45

45:                                               ; preds = %42
  %46 = load float, float* %7, align 4
  %47 = fcmp ogt float %46, 5.000000e+02
  br i1 %47, label %48, label %49

48:                                               ; preds = %45, %42
  store float 1.000000e+02, float* %7, align 4
  br label %49

49:                                               ; preds = %48, %45
  %50 = load float, float* %7, align 4
  %51 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %52 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %51, i32 0, i32 0
  store float %50, float* %52, align 4
  store i32 0, i32* %8, align 4
  br label %53

53:                                               ; preds = %49, %21, %15
  %54 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %54)
  %55 = load i32, i32* %8, align 4
  switch i32 %55, label %57 [
    i32 0, label %56
    i32 1, label %56
  ]

56:                                               ; preds = %53, %53
  ret void

57:                                               ; preds = %53
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @TeamPlayIsOn(...) #2

declare dso_local i32 @BotAddressedToBot(%struct.TYPE_8__*, %struct.TYPE_9__*) #2

declare dso_local i32 @trap_BotMatchVariable(%struct.TYPE_9__*, i32, i8*, i32) #2

declare dso_local i32 @atof(i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
